# pydantic-rpn

./: INTEGRATION.md  LICENSE  README.md  pyproject.toml
examples/: advanced_engineering.py  basic_usage.py  doom_rpn.py  famous_rpn_examples.py  fun_calculator_classics.py  hp_calculator_classics.py  retro_computing_rpn.py
notebooks/: doom_rpn.ipynb  fun_calculator_classics.ipynb  hp_calculator_classics.ipynb  retro_computing_rpn.ipynb
pydantic_rpn/: __init__.py  cli.py  config.py  core.py  repl.py
tests/: test_brutal.py  test_comprehensive.py  test_core.py  test_performance.py  test_restaurant_integration.py
