[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "pydantic-rpn"
version = "0.3.0"
description = "A delightful Python library for Reverse Polish Notation with Pydantic integration"
readme = "README.md"
requires-python = ">=3.8"
license = {file = "LICENSE"}
authors = [
    {name = "Claude Code", email = "noreply@anthropic.com"}
]
keywords = ["rpn", "reverse-polish-notation", "calculator", "pydantic", "validation"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Scientific/Engineering :: Mathematics",
    "Topic :: Software Development :: Libraries :: Python Modules",
]
dependencies = [
    "pydantic>=2.0.0",
    "typing-extensions>=4.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
    "pytest-cov",
    "pytest-xdist",  # Parallel test execution
    "pytest-benchmark",  # Performance testing
    "hypothesis>=6.0",  # Property-based testing
    "ruff",
    "mypy",
    "pre-commit",
]
docs = [
    "mkdocs",
    "mkdocs-material", 
    "mkdocstrings[python]",
]
numpy = ["numpy>=1.20.0"]
pandas = ["pandas>=1.3.0"]

[project.urls]
Homepage = "https://github.com/rsp2k/pydantic-rpn"
Repository = "https://github.com/rsp2k/pydantic-rpn.git"
Documentation = "https://github.com/rsp2k/pydantic-rpn#readme"
"Bug Tracker" = "https://github.com/rsp2k/pydantic-rpn/issues"

[project.scripts]
rpn = "pydantic_rpn.cli:main"

[tool.hatch.build.targets.wheel]
packages = ["pydantic_rpn"]

[tool.ruff]
target-version = "py38"
line-length = 88

[tool.ruff.lint]
select = [
    "E",  # pycodestyle errors
    "W",  # pycodestyle warnings
    "F",  # pyflakes
    "I",  # isort
    "B",  # flake8-bugbear
    "C4", # flake8-comprehensions
    "UP", # pyupgrade
]
ignore = [
    "E501", # line too long, handled by formatter
]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"

[tool.mypy]
python_version = "3.8"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]